--- a/App/View/messege/messege.index.html
+++ b/App/View/messege/messege.index.html
@@ -3,6 +3,8 @@
 <div class="place">
     <span>位置：</span>
     <ul class="placeul">
+        <li>首页</li>
+        <li>出售者平台</li>
         <li>站内信配置</li>
     </ul>
 </div>
